--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
     "morgan": "^1.10.0",
-    "react-bootstrap": "^2.10.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
+    "react-bootstrap": "^2.10.1",
+    "resend": "^3.2.0"
   },
   "description": ""
 }
