--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.2",
+    "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13",
+    "pdfkit": "^0.15.0",
     "react-bootstrap": "^2.10.1"
   },
   "description": ""
