--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.2",
     "chart.js": "^4.4.2",
     "constants": "^0.0.2",
     "cors": "^2.8.5",
-    "debug": "^4.3.4",
     "depd": "^2.0.0",
     "dotenv": "^16.4.4",
     "express": "^4.19.2",
@@ -26,12 +26,15 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0",
     "pdfkit": "^0.15.0",
     "react-bootstrap": "^2.10.1",
     "react-chartjs-2": "^5.2.0",
     "resend": "^3.2.0",
     "vite": "^5.2.6"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "debug": "^4.3.4",
+    "nodemon": "^3.1.0"
+  }
 }
