--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "react-bootstrap": "^2.10.1",
     "react-chartjs-2": "^5.2.0",
-    "vite": "^5.2.6",
-    "nodemailer": "^6.9.13",
-    
-    "resend": "^3.2.0"
+    "resend": "^3.2.0",
+    "vite": "^5.2.6"
   },
   "description": ""
 }
